lots of layout bug fixes

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -9,7 +9,7 @@
 
   @include respond-to("small") {
     padding: 40px 20px;
-    height: $footer-height;
+    min-height: $footer-height;
   }
 
   &-container {
@@ -27,10 +27,10 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    align-items: center;
     width: 100%;
 
     @include respond-to("small") {
+      align-items: center;
       flex-direction: row;
     }
   }
@@ -55,7 +55,10 @@
 
   &-linksContainer {
     margin-top: 80px;
-    margin-left: auto;
+
+    @include respond-to("small") {
+      margin-left: 1rem;
+    }
 
     @include respond-to("medium") {
       margin-top: 0;
